--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,23 +1,32 @@
 \chapter{\sanskrit{अर्जुनविषादयोग}}
-\sanskrit
 
+\sanskrit
 \paragraph{\sanskrit धृतराष्ट्र उवाच}
 
 \begin{quotation}
+
 	धर्मक्षेत्रे कुरुक्षेत्रे समवेता युयुत्सवः  । 
 	
-	मामकाः पाण्डवाश्चैव किमकुर्वत संजय  ॥ १.१ ॥  मूल श्लोक
+	मामकाः पाण्डवाश्चैव किमकुर्वत सञ्जय  ॥ १.१ ॥  मूल श्लोक
 
 \end{quotation}
 
 \begin{quotation}
-धर्म-क्षेत्रे कुरु-क्षेत्रे, समवेता युयुत्सवः  । 
 
-मामकाः पाण्डवाश् चैव, किम अकुर्वत संजय   ॥ १.१ ॥   उच्चारण
+धर्मक्षेत्रे कुरुक्षेत्रे, समवेता युयुत्सवः  । 
+
+मामकाः पाण्डवाश् चैव, किम अकुर्वत सञ्जय   ॥ १.१ ॥   उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
-
+%\paragraph{\textrm{dhṛtarāṣṭra uvāca}}
+%\begin{quotation}
+%
+%\textrm{dharmakṣētrē kurukṣētrē samavētā yuyutsavaḥ.}
+%
+%\textrm{māmakāḥ pāṇḍavāś caiva kim akurvata sañjaya} ॥ 1.1 ॥
+%
+%\end{quotation}
 \paragraph{\sanskrit सञ्जय उवाच}
 
 \begin{quotation}
@@ -30,7 +39,7 @@
 
 दृष्ट्वा तु पाण्डवा-अनीकं, व्यूढं दुर्योधनस् तदा  । 
 
-आचार्यम उप-संगम्य, राजा वचनम् अब्रवीत्  ॥ १.२ ॥  उच्चारण
+आचार्यम्‌ उप-संगम्य, राजा वचनम् अब्रवीत्  ॥ १.२ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
@@ -80,7 +89,7 @@
 
 \begin{quotation}
 
-धृष्ट-केतुश चेकितानः, काशि-राजश् च वीर्यवान्  ।  
+धृष्ट-केतुश् चेकितानः, काशि-राजश् च वीर्यवान्  ।  
 
 पुरुजित कुन्ति भोजश् च, शैब्यश्  च नर नरपुङवः  ॥ १.५ ॥  उच्चारण
 
@@ -114,9 +123,9 @@
 
 \begin{quotation}
 
-अस्माकं तु विशिष्टा ये, तान निबोध द्विजोत्तम  ।  
+अस्माकं तु विशिष्टा ये, तान्‌ निबोध द्विजोत्तम  ।  
 
-नायका मम सैन्यस्य, संज्ञार्थं तान ब्रवीमि ते  ॥ १.७ ॥  उच्चारण
+नायका मम सैन्यस्य, सञ्ज्ञार्थं तान्‌ ब्रवीमि ते  ॥ १.७ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
@@ -181,7 +190,7 @@
 
 \begin{quotation}
 
-अयनेषु च सर्वेषु, यथा भागम अवस्थिताः  ।  
+अयनेषु च सर्वेषु, यथा भागम् अवस्थिताः  ।  
 
 भीष्मम् एवा भिरक्षन्तु, भवन्तः सर्व एव हि  ॥ १.११ ॥  उच्चारण
 
@@ -198,7 +207,7 @@
 
 \begin{quotation}
 
-तस्य संजनयन् हर्षं, कुरु वृद्धः पितामहः  ।  
+तस्य सञ्जनयन् हर्षं, कुरु वृद्धः पितामहः  ।  
 
 सिंहनादं विनद्योच्चैः, शङ्खं दध्मौ प्रतापवान्  ॥ १.१२ ॥  उच्चारण
 
@@ -215,9 +224,9 @@
 
 \begin{quotation}
 
-ततः शङ्खाश् च भेर्यश् च, पण-वानक गोमुखाः  ।  
+ततः शङ्खाश् च भेर्यश् च, पणवानक गोमुखाः  ।  
 
-सहसा एवा अभय-अन्यन्त, स शब्दस तूमुलोऽ अभवत्  ॥ १.१३ ॥  उच्चारण
+सहसा एवा अभय-अन्यन्त, स शब्दस् तूमुलोऽ अभवत्  ॥ १.१३ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
@@ -251,7 +260,7 @@
 
 पाञ्चजन्यं हृषीकेशो, देवदत्तं धनंजयः  ।  
 
-पौण्ड्रं दध्मौ महाशङ्खं, भीम कर्मा वृकोदरः  ॥ १.१५ ॥  उच्चारण
+पौण्ड्रं दध्मौ महाशङ्खं, भीमकर्मा वृकोदरः  ॥ १.१५ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
@@ -285,7 +294,7 @@
 
 काश्यश् च परमेष्वासः, शिखण्डी च महारथः  ।  
 
-धृष्ट-द्युम्-नो विराटश् च, सात्यकिश् च पराजितः  ॥ १.१७ ॥  उच्चारण
+धृष्ट-द्युम्नो विराटश् च, सात्यकिश् चापराजितः  ॥ १.१७ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
@@ -360,7 +369,7 @@
 
 \begin{quotation}
 
-सेनयोर उभयोर मध्ये, रथं स्थापय मेऽ अच्युत  ।  
+सेनयोर उभयोर मध्ये, रथं स्थापय मेऽच्युत  ।  
 
 यावद इतान् निरीक्षेऽ अहं, योद्धु कामान् अवस्थितान्  ॥ १.२१ ॥ 
 
@@ -562,9 +571,9 @@
 
 \begin{quotation}
 
-आचार्याः पितरः पुत्रास, तथैव च पितामहाः ।  
+आचार्याः पितरः पुत्रास्, तथैव च पितामहाः ।  
 
-मातुलाः च श्रशुराः पौत्राः श्यालाः सम्बन्धिनस तथा  ॥ १.३४ ॥  उच्चारण
+मातुलाः श्वशुराः पौत्राः, श्यालाः सम्बन्धिनस तथा  ॥ १.३४ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
@@ -597,10 +606,10 @@
 
 \begin{quotation}
 
-निहत्य धार्तराष्ट्रान् नः, का प्रीतिः स्याज् जनार्दन ।  
+निहत्य धार्तराष्ट्रान् न, का प्रीतिः स्याज् जनार्दन ।  
 
 
-पापम एव आश्रयेद अस्मां, हत्वैतान आततायिनः  ॥ १.३६ ॥  उच्चारण
+पापम एव आश्रयेद अस्मान्‌, हत्वैतान आततायिनः  ॥ १.३६ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
@@ -651,7 +660,7 @@
 
 \begin{quotation}
 
-कथं न ज्ञेयम अस्माभिः, पापाद अस्मान नि-वर्तितुम्‌  ।  
+कथं न ज्ञेयम अस्माभिः, पापाद अस्मान निवर्तितुम्‌  ।  
 
 
 कुलक्षय कृतं दोषं, प्रपश्य-यद्भिर जनार्दन  ॥ १.३९ ॥  उच्चारण
@@ -711,7 +720,7 @@
 संकरो नरकाय एैव, कुलघ्नानां कुलस्य च  ।  
 
 
-पतन्ति पितरो ह्य एषां, लुप्त पिण्डोदक क्रियाः  ॥ १.४२ ॥  उच्चारण
+पतन्ति पितरो ह्येषां, लुप्त पिण्डोदक क्रियाः  ॥ १.४२ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
@@ -727,10 +736,10 @@
 
 \begin{quotation}
 
-दोषैर एतैः कुलघ्नानां, वर्णसङ्कर कारकैः  ।  
+दोषैर एतैः कुलघ्नानां, वर्णसङ्कर-कारकैः  ।  
 
 
-उत्साद्-यन्ते जाति-धर्माः, कुल धर्माश् च शाश्वताः  ॥ १.४३ ॥  उच्चारण
+उत्साद्-यन्ते जाति-धर्माः, कुल-धर्माश् च शाश्वताः  ॥ १.४३ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
@@ -749,7 +758,7 @@
 उत्सन्न कुल धर्माणां, मनुष्याणां जनार्दन  ।  
 
 
-नरकेऽ नियतं वासो, भवतीत अनु-शु-श्रुम  ॥ १.४४ ॥  उच्चारण
+नरकेऽ नियतं वासो, भवतीत्य अनु-शु-श्रुम  ॥ १.४४ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
@@ -807,7 +816,7 @@
 एव मुक्त्वाऽ अर्जुनः संख्ये, रथोपस्थ उपाविशत्  ।  
 
 
-वि-सृज्य स शरं चापं, शोक संविग्न मानसः  ॥ १.४७ ॥  उच्चारण
+विसृज्य स शरं चापं, शोक संविग्न मानसः  ॥ १.४७ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
