--- a/chapter15.tex
+++ b/chapter15.tex
@@ -8,7 +8,7 @@
 
 \begin{quotation}
 
-ऊर्ध्व मूलम अधः शाखम, अश्वत्थं प्राहुर अ-व्ययम्‌  ।  
+ऊर्ध्व मूलम अधः शाखम, अश्वत्थं प्राहुर अव्ययम्‌  ।  
 
 छन्दांसि यस्य पर्णानि, यस्तं वेद स वेदवित्‌  ॥ १५.१ ॥  उच्चारण
 
@@ -25,10 +25,12 @@
 
 \begin{quotation}
 
-अधश् च ऊर्ध्वं प्र-सृतास तस्य शाखा 
+अधश् च ऊर्ध्वं प्रस-ऋतास तस्य शाखा 
+
 गुण प्रवृद्धा विषय प्रवालाः  ।  
 
 अधश् च मूलान्य अनु-सन्त-तानि 
+
 कर्मानु बन्धीनि मनुष्य लोके  ॥ १५.२ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
@@ -44,10 +46,12 @@
 
 \begin{quotation}
 
-न रूपम अस्येह तथो-उप-लभ्यते 
+न रूपम अस्येह तथोप-अलभ्यते 
+
 नान्तो न चादिर न च सम्प्रतिष्ठा  ।  
 
-अश्वत्थम इनं सु-विरूढ-मूलम
+अश्वत्थम इनं सुविरूढ-मूलम
+
 असङ्‍ग शस्त्रेण दृढेन छित्त्वा  ॥ १५.३ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
@@ -63,11 +67,13 @@
 
 \begin{quotation}
 
-ततः पदं तत परि-मार्गि-तव्यं,
+ततः पदं तत परि-मार्गि-तव्यं
+
 यस्मिन् गता न नि-वर्तन्ति भूयः  ।  
 
-तमेव चाद्यं पुरुषं प्रपद्ये यतः 
-प्रवृत्तिः प्र-सृता पुराणी  ॥ १५.४ ॥  उच्चारण
+तमेव चाद्यं पुरुषं प्रपद्ये 
+
+यतः प्रवृत्तिः प्रस-ऋता पुराणी  ॥ १५.४ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
@@ -82,10 +88,12 @@
 \begin{quotation}
 
 निर्मान मोहा जित-सङ्ग-दोषा
+
 अध्यात्म-नित्या वि-निवृत्त-कामाः  ।  
 
 द्वन्द्वैर विमुक्ताः सुख दुःख सञ्ज्ञैर 
-गच्छन्त्य मूढाः पदम अ-व्ययं तत्‌  ॥ १५.५ ॥  उच्चारण
+
+गच्छन्त्य अमूढाः पदम अव्ययं तत्‌  ॥ १५.५ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
@@ -134,7 +142,7 @@
 
 \begin{quotation}
 
-शरीरं यद अवाप्-नोति, यच चप्य उत-क्रामति ईश्वरः  ।  
+शरीरं यद अवाप्-नोति,  यच चप्य उत-क्रामत ईश्वरः  ।  
 
 गृहीत्वै तानि संयाति, वायुर गन्धान इव आशयात्‌  ॥ १५.८ ॥  उच्चारण
 
@@ -170,7 +178,7 @@
 
 उत्क्राम अन्तं स्थितं वापि, भुञ्जानं वा गुणा-अन्वितम्‌   ।  
 
-विमूढा नानु पश्यन्ति ,पश्यन्ति ज्ञान चक्षुषः  ॥ १५.१० ॥  उच्चारण
+विमूढा नानु पश्यन्ति, पश्यन्ति ज्ञान चक्षुषः  ॥ १५.१० ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
@@ -187,7 +195,7 @@
 
 यतन्तो योगिनश् चैनं, पश्यन्त्य आत्मन्य अवस्थितम्‌  ।  
 
-यतन्तोऽ अप्य अकृता-आत्मानो, नैनं पश्यन्त्य चेतसः  ॥ १५.११ ॥  उच्चारण
+यतन्तोऽ अप्य अकृता-आत्मानो, नैनं पश्यन्त्य अचेतसः  ॥ १५.११ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
@@ -202,7 +210,7 @@
 
 \begin{quotation}
 
-यद आदित्य गतं तेजो, जगद  भासयतेऽ खिलम्‌  ।  
+यद आदित्य गतं तेजो, जगद  भासयतेऽ अखिलम्‌  ।  
 
 यच् चन्द्रमसि यच् चाग्नौ, तत्तेजो विद्धि माम-कम्‌  ॥ १५.१२ ॥  उच्चारण
 
@@ -219,7 +227,7 @@
 
 \begin{quotation}
 
-गामा अविश्य च भूतानि, धारयाम्य अहम ओजसा  ।  
+गाम आविश्य च भूतानि, धारयाम्य अहम ओजसा  ।  
 
 पुष्णामि चौषधीः सर्वाः, सोमो भूत्वा रसात्मकः  ॥ १५.१३ ॥  उच्चारण
 
@@ -254,9 +262,11 @@
 \begin{quotation}
 
 सर्वस्य चाहं हृदि सन्नि विष्टो
+
 मत्तः स्मृतिर ज्ञानम अपोहनं च  ।  
 
 वेदैश् च सर्वैर अहम एव वेद्यो 
+
 वेदान्त-कृद वेद-विद एव चाहम्‌  ॥ १५.१५ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
@@ -272,7 +282,7 @@
 
 \begin{quotation}
 
-द्वाविमौ पुरुषौ लोके, क्षरश् चाक्षर एव च  ।  
+द्वाव इमौ पुरुषौ लोके, क्षरश् चाक्षर एव च  ।  
 
 क्षरः सर्वाणि भूतानि, कूटस्थोऽ अक्षर उच्यते  ॥ १५.१६ ॥  उच्चारण
 
@@ -289,7 +299,7 @@
 
 \begin{quotation}
 
-उत्तमः पुरुषः त्व अन्यः, परमात्म एत्य उदाहृतः  ।  
+उत्तमः पुरुषः त्व अन्यः, परमात्म एत्य उदाह-ऋतः ।  
 
 यो लोकत्रयम आविश्य, बिभर्-त्य अव्यय ईश्वरः  ॥ १५.१७ ॥  उच्चारण
 
@@ -323,7 +333,7 @@
 
 \begin{quotation}
 
-यो माम एवम सम्मूढो, जानाति पुरुषोत्तमम्‌  ।  
+यो माम एवम असम्मूढो, जानाति पुरुषोत्तमम्‌  ।  
 
 स सर्व-विद् भजति मां, सर्व भावेन भारत  ॥ १५.१९ ॥  उच्चारण
 
@@ -340,9 +350,9 @@
 
 \begin{quotation}
 
-इति गुह्यत-मम् शास्त्रम, इदम उक्तं मया-नघ  ।  
+इति गुह्य-तमम् शास्त्रम, इदम उक्तं मयानघ  ।  
 
-एतद्‍ बुद्ध्वा बुद्धिमान स्यात, कृत-कृत्यश् च भारत  ॥ १५.२० ॥  उच्चारण
+एतद्‍ बुद्ध्वा बुद्धिमान-स्यात, कृत-कृत्यश् च भारत  ॥ १५.२० ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
