--- a/chapter16.tex
+++ b/chapter16.tex
@@ -8,7 +8,7 @@
 
 \begin{quotation}
 
-अभयं सत्त्व संशुद्धिर् ज्ञानयोग व्यवस्थितिः ।  
+अभयं सत्त्व संशुद्धिर्, ज्ञानयोग व्यवस्थितिः ।  
 
 दानं दमश् च यज्ञश् च, स्वाध्यायस् तप आर्जवम्‌  ॥ १६.१ ॥  उच्चारण
 
@@ -25,9 +25,9 @@
 
 \begin{quotation}
 
-अहिंसा सत्यम क्रोधस्, त्यागः शान्तिर अपैशुनम्‌ ।  
+अहिंसा सत्यम अक्रोधस्, त्यागः शान्तिर अपैशुनम्‌ ।  
 
-दया भूतेष् अवलोलुप् त्वम्,  मार्दवं ह्रीर अचापलम्‌  ॥ १६.२ ॥  उच्चारण
+दया भूतेष्व अलोलुप्त्वं,  मार्दवं ह्रीर अचापलम्‌  ॥ १६.२ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
