--- a/introduction.tex
+++ b/introduction.tex
@@ -2,7 +2,7 @@
 	\includegraphics[scale=0.2,keepaspectratio]{eps5black}\\
 	\sanskrit गीतोच्चारण}
 \author{\sanskrit विश्वजीत अग्रवाल}
-\date{January 2021	}
+\date{January 2021}
 \maketitle
 \begin{quotation}
 	\begin{center}\sanskrit
@@ -18,6 +18,15 @@
 \begin{center}
 	\includegraphics[scale=0.25,keepaspectratio]{eps2}
 \end{center}
+\pagebreak
+\hspace{0pt}
+\vfill
+\begin{center}
+	\sanskrit ललित भाई को समर्पित...
+\end{center}
+\vfill
+\hspace{0pt}
+\pagebreak
 \chapter*{\sanskrit प्राक्कथन}
 \sanskrit
 
