--- a/gitocharan.tex
+++ b/gitocharan.tex
@@ -1,30 +1,75 @@
 \documentclass[12pt]{book}
 \usepackage[margin=1in]{geometry}
 \usepackage{fontspec}
+%\usepackage{polyglossia}
 \usepackage{graphicx}
 \usepackage[english]{babel} 
-%\setmainfont[Script=Devanagari]{Lohit Devanagari}
+%\usepackage{devanagari}
+%\newfontfamily\sanskrit[Script=Devanagari]{Lohit Devanagari}
+
+%Setting Marathi as main language and Shobhika as main font using package Polyglossia.
+%\usepackage{fontspec}
+%\setmainfont[Script=Devanagari, Mapping=devanagarinumerals]{Lohit Devanagari}
+%\newfontfamily\marathifont[Script=Devanagari, Mapping=devanagarinumerals]{Lohit Devanagari}
+%\usepackage{polyglossia}
+%\setmainlanguage[numerals=Devanagari]{Sanskrit}
+
 \newfontfamily\sanskrit[Script=Devanagari]{Lohit Devanagari}
+%\newfontfamily\roman[Script=Roman]{Times New Roman}
+%\newcommand{\R}{\textup{\textrm{R}}}
+
+%\usepackage[roman]{babel}
+
+\usepackage{devanagaridigits}
 \usepackage{tocloft}
 \renewcommand{\cftchapdotsep}{\cftdotsep}
 \usepackage{hyperref}
-
+%\usepackage{devanagari}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
+
+%\newcommand{\devanagarinumeral}[1]{%
+%	\devanagaridigits{\number\csname c@#1\endcsname}}
+
+% renew all representation of counters
+%\renewcommand{\thesection}{\devanagarinumeral{section}}
+%\renewcommand{\thepage}{\devanagarinumeral{page}}
+%\renewcommand{\theenumi}{\devanagarinumeral{enumi}}
+%\renewcommand{\thechapter}{\devanagarinumeral{chapter}}
+
+%\newcommand{\arabictodevnag}[1]%
+%{%
+%	\StrSubstitute{\num}{0}{\sanskrit ०}[\num]
+%	\StrSubstitute{\num}{1}{\sanskrit १}[\num]
+%	\StrSubstitute{\num}{2}{\sanskrit २}[\num]
+%	\StrSubstitute{\num}{3}{\sanskrit ३}[\num]
+%	\StrSubstitute{\num}{4}{\sanskrit ४}[\num]
+%	\StrSubstitute{\num}{5}{\sanskrit ५}[\num]
+%	\StrSubstitute{\num}{6}{\sanskrit ६}[\num]
+%	\StrSubstitute{\num}{7}{\sanskrit ७}[\num]
+%	\StrSubstitute{\num}{8}{\sanskrit ८}[\num]
+%	\StrSubstitute{\num}{9}{\sanskrit ९}[\num]
+%}
+
 %\fancyhead{} % clear all header fields
 \renewcommand{\headrulewidth}{0pt} % no line in header area
 \fancyhead[LE,RO]{\sanskrit गीतोच्चारण}
-\fancyfoot{} % clear all footer fields
-\fancyfoot[LE,RO]{\thepage}           % page number in "outer" position of footer line
+%\fancyfoot{} % clear all footer fields
+%\fancyfoot[LE,RO]{\thepage}           % page number in "outer" position of footer line
 \fancyfoot[RE,LO]{\tiny \bf Copyrighted Material, All Rights Reserved} % other info in "inner" position of footer line
 
+%\cfoot{\fancyplain{}{\Large \arabictodevnag{\thepage}}}
 
 \usepackage{eso-pic}
 \AddToShipoutPictureBG*{%
 	\AtTextLowerLeft{\makebox[\textwidth][r]{%
-			\includegraphics[keepaspectratio]{ISBN}}}}
+			\includegraphics[scale=0.4,keepaspectratio]{978-1-63795-456-0.eps}}}}
+
+
 
 \begin{document}
+\def\chaptername{{\sanskrit अध्याय}}
+\def\contentsname{{\sanskrit विषय सूची}}
 \include{introduction.tex}
 \tableofcontents
 \include{chapter1.tex}
@@ -67,7 +112,7 @@
 
 \AddToShipoutPictureBG*{%
 	\AtTextLowerLeft{\makebox[\textwidth][r]{%
-			\includegraphics[keepaspectratio]{ISBN}}}}
+			\includegraphics[scale=0.4,keepaspectratio]{978-1-63795-456-0.eps}}}}
 
 \end{document}
 
