--- a/chapter16.tex
+++ b/chapter16.tex
@@ -85,16 +85,16 @@
 
 
 \begin{quotation}
-द्वौ भूतसर्गौ लोकऽस्मिन्दैव आसुर एव च ।  
+द्वौ भूतसर्गौ लोकेऽस्मिन्दैव आसुर एव च ।  
 
-दैवो विस्तरशः प्रोक्त आसुरं पार्थ में श्रृणु  ॥ १६.६ ॥  मूल श्लोक
+दैवो विस्तरशः प्रोक्त आसुरं पार्थ में शृणु  ॥ १६.६ ॥  मूल श्लोक
 \end{quotation}
 
 \begin{quotation}
 
-द्वौ भूत-सर्गौ लोकऽ अस्मिन्, दैव आसुर एव च ।  
+द्वौ भूत-सर्गौ लोकेऽ अस्मिन्, दैव आसुर एव च ।  
 
-दैवो विस्तरशः प्रोक्त, आसुरं पार्थ में श्रृणु  ॥ १६.६ ॥  उच्चारण
+दैवो विस्तरशः प्रोक्त, आसुरं पार्थ में शृणु  ॥ १६.६ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
