--- a/chapter5.tex
+++ b/chapter5.tex
@@ -125,14 +125,14 @@
 
 नैव किंचित्करोमीति युक्तो मन्येत तत्ववित्‌  ।  
 
-पश्यञ्श्रण्वन्स्पृशञ्जिघ्रन्नश्नन्गच्छन्स्वपन्श्वसन्‌  ॥ ५.८ ॥  मूल श्लोक
+पश्यञ्शृण्वन्स्पृशञ्जिघ्रन्नश्नन्गच्छन्स्वपन्श्वसन्‌  ॥ ५.८ ॥  मूल श्लोक
 \end{quotation}
 
 \begin{quotation}
 
 नैव किंचित करोमीति, युक्तो मन्येत तत्व वित्‌  ।  
 
-पश्यन् श्रण्वन् स्पर्शन् जिघ्रन्न, अस्नन् गच्छन् स्वपन् श्वसन्‌  ॥ ५.८ ॥  उच्चारण
+पश्यन् शृण्वन् स्पर्शन् जिघ्रन्न, अस्नन् गच्छन् स्वपन् श्वसन्‌  ॥ ५.८ ॥  उच्चारण
 
 \noindent\rule{16cm}{0.4pt} 
 \end{quotation}
