--- a/introduction.tex
+++ b/introduction.tex
@@ -35,14 +35,14 @@
 \begin{quotation}\sanskrit
 नैव किंचित्करोमीति युक्तो मन्येत तत्ववित्‌  । 
 
-पश्यञ्श्रण्वन्स्पृशञ्जिघ्रन्नश्नन्गच्छन्स्वपन्श्वसन्‌  ॥ ५.८ ॥  
+पश्यञ्शृण्वन्स्पृशञ्जिघ्रन्नश्नन्गच्छन्स्वपन्श्वसन्‌  ॥ ५.८ ॥  
 \end{quotation}
 जब गीता का अनुवाद अन्य भाषाओँ में हुआ तब ऐसे श्लोकों को संधि-विच्छेद करने के बाद ही लिखा गया, इस कारण अन्य भाषाओं में गीता पड़ना आसान है ।  परन्तु संस्कृत में लिखी गयी गीता आज भी कठिन ही है ।  प्रस्तुत पुस्तक में यह प्रयास किया गया है, देवनागरी भाषा में ही गीता के श्लोकों को संधि-विच्छेद करके लिखा जाए । 
 
 \begin{quotation}\sanskrit
 नैव किंचित करोमीति, युक्तो मन्येत तत्व वित्‌  । 
 
-पश्यन् श्रण्वन् स्पर्शन् जिघ्रन्न, अस्नन् गच्छन् स्वपन् श्वसन्‌  ॥ ५.८ ॥ 
+पश्यन् शृण्वन् स्पर्शन् जिघ्रन्न, अस्नन् गच्छन् स्वपन् श्वसन्‌  ॥ ५.८ ॥ 
 \end{quotation}
 गीता को समझने के लिए कहा जाता है कि कई जन्म लेने पड़ते हैं ।  लेकिन इसका आरम्भ उचित उच्चारण से ही हो तो अच्छा है ।  संधि-विच्छेद के पश्चात आधे से ज्यादा श्लोक देवनागरी पढ़ने वालों को समझ में भी आ सकता है ।  यदि आपको कोई त्रुटि मिले तो कृपया अवश्य बतायें । 
 इस पुस्तक के संकलन के लिये मूल श्लोक \textrm{IIT} कानपुर की \textrm{website} से लिये गये हैं ।  \textrm{https://www.gitasupersite.iitk.ac.in}
